Partial port of the method for checking the compatibility of the used font to the language of the book from the Android frontend to the Qt frontend. For this, additional string functions have been added: lString8::pos(lChar8) lString8::lowercase() lString8::uppercase() At the moment, for this check the conversion of three-letter language codes (ISO 639-2) to two-letter (ISO 639-1) is not implemented.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ ENDIF()
 
 
 INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/cr3qt )
+INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/crengine/fc-lang )
 
 IF (UNIX)
 FIND_PROGRAM(GZIP_TOOL
