--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 SET(CR3_UIS
   src/aboutdlg.ui        src/bookmarklistdlg.ui  src/mainwindow.ui  src/settings.ui
   src/addbookmarkdlg.ui  src/filepropsdlg.ui     src/recentdlg.ui   src/tocdlg.ui
-  src/wolexportdlg.ui    src/exportprogressdlg.ui src/searchdlg.ui
+  src/wolexportdlg.ui    src/exportprogressdlg.ui src/searchdlg.ui  src/fallbackfontsdialog.ui
 )
 
 SET(CR3_MOC_HDRS
@@ -18,6 +18,7 @@ SET(CR3_MOC_HDRS
   src/exportprogressdlg.h
   src/tocdlg.h
   src/searchdlg.h
+  src/fallbackfontsdialog.h
 )
 
 SET (CR3_SOURCES 
@@ -35,6 +36,7 @@ SET (CR3_SOURCES
   src/wolexportdlg.cpp
   src/exportprogressdlg.cpp
   src/searchdlg.cpp
+  src/fallbackfontsdialog.cpp
 )
 
 if(MAC)
