Add AppStream metadata file
It's useful for software catalogs to display detailed information about this application.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -213,6 +213,7 @@ INSTALL( DIRECTORY data/backgrounds DESTINATION share/cr3 )
 INSTALL( FILES ${CR3_CHANGELOG} DESTINATION share/doc/cr3 )
 INSTALL( FILES ${QM_FILES} DESTINATION share/cr3/i18n )
 INSTALL( FILES src/desktop/cr3.desktop DESTINATION share/applications )
+INSTALL( FILES src/desktop/cr3.appdata.xml DESTINATION share/metainfo )
 INSTALL( FILES src/desktop/cr3.png DESTINATION share/pixmaps )
 INSTALL( FILES src/desktop/cr3.xpm DESTINATION share/pixmaps )
 
