Fixes for Win32.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,9 +222,7 @@ ELSE()
 INSTALL( TARGETS cr3 RUNTIME DESTINATION . )
 INSTALL( DIRECTORY data/ DESTINATION . 
    FILES_MATCHING PATTERN "*.css" )
-INSTALL( DIRECTORY data/hyph DESTINATION . 
-   FILES_MATCHING PATTERN "*.pdb" )
-INSTALL( DIRECTORY data/hyph DESTINATION . 
+INSTALL( DIRECTORY ../cr3gui/data/hyph DESTINATION . 
    FILES_MATCHING PATTERN "*.pattern" )
 #INSTALL( DIRECTORY data/skins DESTINATION . )
 INSTALL( FILES ${QM_FILES} DESTINATION i18n )
