--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ if(ADD_DEBUG_EXTRA_OPTS)
 	endif ("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${DEBUG_EXTRA_FLAGS}")
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${DEBUG_EXTRA_FLAGS}")
-endif(USE_DEBUG_EXTRA_OPTS)
+endif(ADD_DEBUG_EXTRA_OPTS)
 
 if (WIN32)
 	set(CMAKE_RC_COMPILER windres)
