--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,12 +41,10 @@ if(WIN32)
   set_property(SOURCE cr3.rc PROPERTY OBJECT_DEPENDS ${CMAKE_BINARY_DIR}/config.h)
 endif(WIN32)
 
-if(MAC)
-  add_definitions(-DCR3_DATA_DIR="" -DUSE_FONTCONFIG=0 ${CARBON_CFLAGS})
-elseif(UNIX)
-  add_definitions(-DCR3_DATA_DIR="${CMAKE_INSTALL_PREFIX}/share/cr3/")
+if(UNIX)
+  add_definitions(-DCRUI_DATA_DIR="${CMAKE_INSTALL_PREFIX}/share/cruiqt/")
 else()
-  add_definitions(-DCR3_DATA_DIR="")
+  add_definitions(-DCRUI_DATA_DIR="")
 endif()
 
 set(LANGUAGES ru uk cs de es pl bg hu)
@@ -90,11 +88,12 @@ else()
   set (CR3_MAN_PAGES)
 endif(UNIX)
 
-
 if (WIN32)
-  add_executable(cr3 WIN32 ${CR3_MAN_PAGES} ${SRC_LIST} ${CR3_RCS} ${QM_FILES} ${RES_FILES})
+  # -mwindows -> window application (without terminal screen)
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mwindows")
+  add_executable(cruiqt WIN32 ${CR3_MAN_PAGES} ${SRC_LIST} ${CR3_RCS} ${QM_FILES} ${RES_FILES})
 else()
-  add_executable(cr3 ${CR3_MAN_PAGES} ${SRC_LIST} ${CR3_RCS} ${QM_FILES})
+  add_executable(cruiqt ${CR3_MAN_PAGES} ${SRC_LIST} ${CR3_RCS} ${QM_FILES})
 endif (WIN32)
 
 if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
@@ -106,50 +105,50 @@ endif(${CMAKE_BUILD_TYPE} STREQUAL Debug)
 if(WIN32)
 if(CMAKE_GENERATOR MATCHES "Visual Studio.*")
   message("Visual Studio generator detected")
-  set_target_properties(cr3 PROPERTIES
+  set_target_properties(cruiqt PROPERTIES
       LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE")
-  set_target_properties(cr3 PROPERTIES
+  set_target_properties(cruiqt PROPERTIES
       LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:CONSOLE")
-  set_target_properties(cr3 PROPERTIES
+  set_target_properties(cruiqt PROPERTIES
       LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
-  set_target_properties(cr3 PROPERTIES
+  set_target_properties(cruiqt PROPERTIES
       LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS")
 endif(CMAKE_GENERATOR MATCHES "Visual Studio.*")
 endif(WIN32)
 
 
-target_link_libraries(cr3 crengine-ng::crengine-ng Qt5::Core Qt5::Gui Qt5::Widgets)
+target_link_libraries(cruiqt crengine-ng::crengine-ng Qt5::Core Qt5::Gui Qt5::Widgets)
 
 if (MAC)
-  install( TARGETS cr3 RUNTIME DESTINATION Contents/MacOS )
-  #install( DIRECTORY data/skins DESTINATION share/cr3/skins )
-  install( DIRECTORY data/textures DESTINATION Contents/Resources )
-  install( DIRECTORY data/backgrounds DESTINATION Contents/Resources )
-  #install( FILES ${CR3_MAN_PAGES} DESTINATION share/doc/cr3 )
+  install( TARGETS cruiqt RUNTIME DESTINATION Contents/MacOS )
+  #install( DIRECTORY ../data/skins DESTINATION share/cruiqt/skins )
+  install( DIRECTORY ../data/textures DESTINATION Contents/Resources )
+  install( DIRECTORY ../data/backgrounds DESTINATION Contents/Resources )
+  #install( FILES ${CR3_MAN_PAGES} DESTINATION share/doc/cruiqt )
   install( FILES ${QM_FILES} DESTINATION Contents/Resources/i18n )
   install( DIRECTORY ${QT_INCLUDE_DIR}/../src/gui/mac/qt_menu.nib DESTINATION Contents/Resources )
-  install( FILES src/desktop/Info.plist DESTINATION Contents )
-  install( FILES src/desktop/PkgInfo DESTINATION Contents )
-  #install( FILES src/desktop/cr3.png DESTINATION share/pixmaps )
-  #install( FILES src/desktop/cr3.xpm DESTINATION share/pixmaps )
+  install( FILES desktop/Info.plist DESTINATION Contents )
+  install( FILES desktop/PkgInfo DESTINATION Contents )
+  #install( FILES desktop/cr3.png DESTINATION share/pixmaps )
+  #install( FILES desktop/cr3.xpm DESTINATION share/pixmaps )
 elseif (UNIX)
   install(FILES ${man_gz}
     DESTINATION "share/man/man1"
     PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
-  install( TARGETS cr3 RUNTIME DESTINATION bin )
-  #install( DIRECTORY data/skins DESTINATION share/cr3/skins )
-  install( DIRECTORY data/textures DESTINATION share/cr3 )
-  install( DIRECTORY data/backgrounds DESTINATION share/cr3 )
-  #install( FILES ${CR3_MAN_PAGES} DESTINATION share/doc/cr3 )
-  install( FILES ${QM_FILES} DESTINATION share/cr3/i18n )
-  install( FILES src/desktop/cr3.desktop DESTINATION share/applications )
-  install( FILES src/desktop/cr3.appdata.xml DESTINATION share/metainfo )
-  install( FILES src/desktop/cr3.png DESTINATION share/pixmaps )
-  install( FILES src/desktop/cr3.xpm DESTINATION share/pixmaps )
+  install( TARGETS cruiqt RUNTIME DESTINATION bin )
+  #install( DIRECTORY ../data/skins DESTINATION share/cruiqt/skins )
+  install( DIRECTORY ../data/textures DESTINATION share/cruiqt )
+  install( DIRECTORY ../data/backgrounds DESTINATION share/cruiqt )
+  #install( FILES ${CR3_MAN_PAGES} DESTINATION share/doc/cruiqt )
+  install( FILES ${QM_FILES} DESTINATION share/cruiqt/i18n )
+  install( FILES desktop/cr3.desktop DESTINATION share/applications )
+  install( FILES desktop/cr3.appdata.xml DESTINATION share/metainfo )
+  install( FILES desktop/cr3.png DESTINATION share/pixmaps )
+  install( FILES desktop/cr3.xpm DESTINATION share/pixmaps )
 else()
-  install( TARGETS cr3 RUNTIME DESTINATION . )
-  #install( DIRECTORY data/skins DESTINATION . )
+  install( TARGETS cruiqt RUNTIME DESTINATION . )
+  #install( DIRECTORY ../data/skins DESTINATION . )
+  install( DIRECTORY ../data/textures DESTINATION . )
+  install( DIRECTORY ../data/backgrounds DESTINATION . )
   install( FILES ${QM_FILES} DESTINATION i18n )
-  install( DIRECTORY data/textures DESTINATION . )
-  install( DIRECTORY data/backgrounds DESTINATION . )
-endif(MAC)
+endif()
