--- a/src/desktop/crqt.desktop
+++ b/src/desktop/crqt.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=CoolReader3
+Name=CoolReaderNG/Qt
 GenericName=E-book reader
 GenericName[ar]=قارئ الكتب الإلكترونية
 GenericName[ast]=Llector de llibros electrónicos
@@ -61,11 +61,11 @@ GenericName[zh_HK]=電子書閱讀器
 GenericName[zh_TW]=電子書閱讀器
 Comment=A cross-platform XML/CSS based eBook reader
 Comment[ru]=Кроссплатформенное чтение электронных книг, основанное на XML/CSS
-TryExec=cr3
-Exec=cr3 %F
+TryExec=crqt
+Exec=crqt %F
 StartupNotify=true
 Terminal=false
 Type=Application
-Icon=cr3
+Icon=crqt
 Categories=Office;Viewer;Literature;
 MimeType=application/epub+zip;application/x-fictionbook+xml;application/x-zip-compressed-fb2;text/html;application/xhtml+xml;text/plain;application/x-psion-compressed-text;application/rtf;application/zip;application/x-chm;
