Removed translation files that were always 100% empty.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,7 +41,7 @@ if(WIN32)
   set_property(SOURCE crqt.rc PROPERTY OBJECT_DEPENDS ${CMAKE_BINARY_DIR}/config.h)
 endif(WIN32)
 
-set(LANGUAGES ru uk cs de es pl bg hu)
+set(LANGUAGES ru uk cs bg hu)
 message( "Languages: ${LANGUAGES}" )
 set(LANGUAGE_TS_FILES)
 foreach(LANGUAGE ${LANGUAGES})
