Restored ability to build under/for MacOS.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -86,17 +86,19 @@ endif(WIN32)
 
 target_link_libraries(crqt crengine-ng::crengine-ng Qt5::Core Qt5::Gui Qt5::Widgets)
 
-if (MAC)
+if (MACOS)
   install( TARGETS crqt RUNTIME DESTINATION Contents/MacOS )
   #install( DIRECTORY ../data/skins DESTINATION share/crqt/skins )
   install( DIRECTORY ../data/textures DESTINATION Contents/Resources )
   install( DIRECTORY ../data/backgrounds DESTINATION Contents/Resources )
   install( FILES ${QM_FILES} DESTINATION Contents/Resources/i18n )
-  install( DIRECTORY ${QT_INCLUDE_DIR}/../src/gui/mac/qt_menu.nib DESTINATION Contents/Resources )
-  install( FILES desktop/Info.plist DESTINATION Contents )
+  install( FILES desktop/crqt.icns DESTINATION Contents/Resources )
+  configure_file(desktop/Info.plist.cmake ${CMAKE_CURRENT_BINARY_DIR}/Info.plist)
+  install( FILES ${CMAKE_CURRENT_BINARY_DIR}/Info.plist DESTINATION Contents )
   install( FILES desktop/PkgInfo DESTINATION Contents )
-  #install( FILES desktop/crqt.png DESTINATION share/pixmaps )
-  #install( FILES desktop/crqt.xpm DESTINATION share/pixmaps )
+  # install crengine-ng data files
+  install( DIRECTORY ${CRENGINE_NG_DATA_DIR}/ DESTINATION Contents/Resources FILES_MATCHING PATTERN "*.css" )
+  install( DIRECTORY ${CRENGINE_NG_DATA_DIR}/hyph/ DESTINATION Contents/Resources/hyph FILES_MATCHING PATTERN "*.pattern" )
 elseif (UNIX)
   install( TARGETS crqt RUNTIME DESTINATION bin )
   #install( DIRECTORY ../data/skins DESTINATION share/crqt/skins )
