--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,11 +49,19 @@ foreach(LANGUAGE ${LANGUAGES})
   list(APPEND LANGUAGE_TS_FILES ${TS_FILE})
 endforeach(LANGUAGE ${LANGUAGES})
 
-qt5_add_resources(CRQT_RCS crqtres.qrc)
+if( ${USE_QT} STREQUAL QT6 )
+  qt6_add_resources(CRQT_RCS crqtres.qrc)
+elseif ( ${USE_QT} STREQUAL QT5 )
+  qt5_add_resources(CRQT_RCS crqtres.qrc)
+endif()
 
 set(QM_FILES)
 if(LANGUAGE_TS_FILES)
-  qt5_update_translations(QM_FILES ${LANGUAGE_TS_FILES} ${SRC_LIST})
+  if( ${USE_QT} STREQUAL QT6 )
+    qt6_update_translations(QM_FILES ${LANGUAGE_TS_FILES} ${SRC_LIST})
+  elseif ( ${USE_QT} STREQUAL QT5 )
+    qt5_update_translations(QM_FILES ${LANGUAGE_TS_FILES} ${SRC_LIST})
+  endif()
 endif(LANGUAGE_TS_FILES)
 
 if (WIN32)
@@ -84,7 +92,11 @@ if(CMAKE_GENERATOR MATCHES "Visual Studio.*")
 endif(CMAKE_GENERATOR MATCHES "Visual Studio.*")
 endif(WIN32)
 
-target_link_libraries(crqt crengine-ng::crengine-ng Qt5::Core Qt5::Gui Qt5::Widgets)
+if( ${USE_QT} STREQUAL QT6 )
+  target_link_libraries(crqt crengine-ng::crengine-ng Qt6::Core Qt6::Gui Qt6::Widgets)
+elseif ( ${USE_QT} STREQUAL QT5 )
+  target_link_libraries(crqt crengine-ng::crengine-ng Qt5::Core Qt5::Gui Qt5::Widgets)
+endif()
 
 if (MACOS)
   install( TARGETS crqt RUNTIME DESTINATION Contents/MacOS )
