--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -67,7 +67,7 @@ endif(LANGUAGE_TS_FILES)
 if (WIN32)
   # -mwindows -> window application (without terminal screen)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mwindows")
-  add_executable(crqt WIN32 ${SRC_LIST} ${CRQT_RCS} ${QM_FILES} ${RES_FILES})
+  add_executable(crqt WIN32 ${SRC_LIST} ${CRQT_RCS} ${QM_FILES})
 else()
   add_executable(crqt ${SRC_LIST} ${CRQT_RCS} ${QM_FILES})
 endif (WIN32)
