Settings dialog: style preview window implemented in separate tool window.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SRC_LIST
   mainwindow.cpp
   settings.ui
   settings.cpp
+  sampleview.cpp
   wolexportdlg.ui
   wolexportdlg.cpp
   exportprogressdlg.ui
