--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,24 @@
 # Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+
+default:
+  image: ubuntu:22.04
+
 stages:
 - test
 sast:
   stage: test
 include:
 - template: Security/SAST.gitlab-ci.yml
+
+style-check-diff:
+  stage: test
+  allow_failure: true
+  before_script:
+    # install required tools
+    - export DEBIAN_FRONTEND=noninteractive
+    - apt update
+    - apt install -qq -y git clang-format
+  script:
+    - .ci/run-style-check-diff.sh
