src/CMakeLists.txt: install app icon

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -130,6 +130,8 @@ elseif (UNIX)
   install( FILES desktop/crqt.appdata.xml DESTINATION share/metainfo )
   install( FILES desktop/crqt.png DESTINATION share/pixmaps )
   install( FILES desktop/crqt.xpm DESTINATION share/pixmaps )
+  install( FILES desktop/crqt.png DESTINATION share/icons/hicolor/48x48/apps )
+  install( FILES icons/crqt.svg DESTINATION share/icons/hicolor/scalable/apps )
 else()
   install( TARGETS crqt RUNTIME DESTINATION . )
   #install( DIRECTORY ../data/skins DESTINATION . )
