Added classes TabData & TabsCollection: information about tabs for implementing a multi-tabbed interface.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,6 +37,8 @@ set(SRC_LIST
   fallbackfontsdialog.cpp
   fontfamiliesdialog.ui
   fontfamiliesdialog.cpp
+  tabdata.cpp
+  tabscollection.cpp
 )
 
 if(WIN32)
