--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules/")
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 0)
 set(VERSION_PATCH 10)
-set(VERSION_DEV_A "beta1")
-set(VERSION_DEV_CODE 11)
+set(VERSION_DEV_A "")
+set(VERSION_DEV_CODE 30)
 set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 if (VERSION_DEV_A)
   set(VERSION "${VERSION}-${VERSION_DEV_A}")
