--- a/src/desktop/crqt.desktop
+++ b/src/desktop/crqt.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=CoolReaderNG/Qt
+Name=crqt-ng
 GenericName=E-book reader
 GenericName[ar]=قارئ الكتب الإلكترونية
 GenericName[ast]=Llector de llibros electrónicos
