Add XtExportDlg and PreviewWidget

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,9 @@ set(SRC_LIST
   tabdata.cpp
   tabscollection.cpp
   xtexportprofile.cpp
+  xtexportdlg.ui
+  xtexportdlg.cpp
+  previewwidget.cpp
 )
 
 if(WIN32)
