Refactor build and project configuration for macOS support
Added macOS-specific RPATH settings to enable framework usage and updated relevant plist fields for rebranding to "cr2xt." Improved version handling by integrating CR2XT_VERSION and adjusted file installation paths for consistency. Updated `.gitignore` to include new build artifacts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,10 @@ set(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 if (VERSION_DEV_A)
   set(VERSION "${VERSION}-${VERSION_DEV_A}")
 endif()
+# Use CR2XT_VERSION from umbrella project if available
+if(CR2XT_VERSION)
+  set(VERSION "${CR2XT_VERSION}")
+endif()
 set(PACKAGE_VERSION ${VERSION})
 # for windows rc file
 set(PRODUCTVERSION_V "${VERSION_MAJOR},${VERSION_MINOR},${VERSION_PATCH},${VERSION_DEV_CODE}")
